# openh264demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/stapler/openh264demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  native-lib.cpp
app/src/main/cpp/utils/: logger.h  timer.c
app/src/main/java/com/stapler/openh264demo/: CameraFragment.kt  CameraSizes.kt  H264Encoder.kt  MainActivity.kt  PermissionFragment.kt  YuvToRgbConverter.kt
app/src/main/res/layout/: activity_main.xml  fragment_camera.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/stapler/openh264demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
